# Issuetopr

./: .env.example  .gitignore  README.md  architecture.html  pyproject.toml
.github/workflows/: agent.yml
agent/: github_client.py  loop.py  main.py  repo.py  search.py  tools.py
docs/superpowers/plans/: 2026-05-30-issue-to-pr-agent.md
docs/superpowers/specs/: 2026-05-30-issue-to-pr-agent-design.md
tests/: conftest.py  test_github_client.py  test_loop.py  test_main.py  test_repo.py  test_search.py  test_tools.py
